--- a/blog.html
+++ b/blog.html
@@ -38,7 +38,7 @@
                 <div class="hidden justify-between items-center w-full lg:flex lg:w-auto lg:order-1" id="mobile-menu-2">
                     <ul class="flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8 lg:mt-0">
                         <li>
-                            <a href="#" class="block py-2 pr-4 pl-3 text-white rounded bg-primary-700 lg:bg-transparent lg:text-primary-700 lg:p-0 dark:text-white raleway" aria-current="page">HOME</a>
+                            <a href="index.html" class="block py-2 pr-4 pl-3 text-white rounded bg-primary-700 lg:bg-transparent lg:text-primary-700 lg:p-0 dark:text-white raleway" aria-current="page">HOME</a>
                         </li>
                         <li>
                             <a href="faceAndNeck.html" class="raleway block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 raleway">FACE AND NECK</a>
@@ -76,7 +76,7 @@
                                 <div class="banner-first-image text-white">
                                     <img src="assets/blog-images/banner-image-1.png" alt="banner-image">
                                 </div>
-                                <div class="banner-heading font-64 text-white ml-8"><h2 class="cormorant">BLOG</h2></div>
+                                <div class="banner-heading font-64 text-white ml-8"><h2 class="cormorant  cormorant">BLOG</h2></div>
                             </div>
                             <div class="w-11/12 mt-4 relative">    
                                 <div class="leave-background-image absolute top-[-80%] right-[-20%]">
@@ -85,7 +85,7 @@
                                 <div class="banner-second-part flex justify-between">
                                     <div class="banner-second-text">
                                         <div class="banner-p my-4">
-                                            <p class="text-white raleway">We use premium products for a <br> more natural result.</p>
+                                            <p class="text-white raleway raleway ">We use premium products for a <br> more natural result.</p>
                                         </div>
                                         <div class="banner-crub flex">
                                             <div class="banner-crub-image mr-3">
@@ -125,15 +125,15 @@
                                                 <a href="blogdetail.html">
                                                     <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 text-black cormorant">The Impact of North Los Angeles  on Women’s Skin</h5>
                                                 </a>
-                                                <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 ">The Impact of North Los Angeles Climate on Women’s Skin...</p>
+                                                <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 raleway">The Impact of North Los Angeles Climate on Women’s Skin...</p>
                                                 <div class="read-more flex justify-between">
-                                                    <a href="blogdetail.html" class="inline-flex items-center  py-2.5 text-sm font-medium text-center text-black">
+                                                    <a href="blogdetail.html" class="raleway inline-flex items-center  py-2.5 text-sm font-medium text-center text-black">
                                                         Read more
                                                         <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180 text-black mt-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                                                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                                                         </svg>
                                                     </a>
-                                                    <p class="py-2.5 text-color">2021-10-01</p>
+                                                    <p class="py-2.5 text-color raleway">2021-10-01</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -149,17 +149,17 @@
                                             </a>
                                             <div class="p-5">
                                                 <a href="blogdetail.html">
-                                                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 text-black">Pros and cons of laser hair removal in Los Angeles</h5>
+                                                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 text-black cormorant">Pros and cons of laser hair removal in Los Angeles</h5>
                                                 </a>
-                                                <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Laser hair removal is a popular cosmetic procedure in Los Angeles...</p>
+                                                <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 raleway">Laser hair removal is a popular cosmetic procedure in Los Angeles...</p>
                                                 <div class="read-more flex justify-between">
-                                                    <a href="blogdetail.html"class="inline-flex items-center  py-2.5 text-sm font-medium text-center text-black">
+                                                    <a href="blogdetail.html"class="inline-flex items-center  py-2.5 text-sm font-medium text-center text-black raleway">
                                                         Read more
                                                         <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180 text-black mt-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                                                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                                                         </svg>
                                                     </a>
-                                                    <p class="py-2.5 text-color">2021-10-01</p>
+                                                    <p class="py-2.5 text-color raleway">2021-10-01</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -175,17 +175,17 @@
                                             </a>
                                             <div class="p-5">
                                                 <a href="blogdetail.html">
-                                                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 text-black">Safe and Effective Solutions for Aesthetic Concerns</h5>
+                                                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 text-black cormorant">Safe and Effective Solutions for Aesthetic Concerns</h5>
                                                 </a>
-                                                <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Are you seeking a safe and effective way in Los Angeles to address...</p>
+                                                <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 raleway">Are you seeking a safe and effective way in Los Angeles to address...</p>
                                                 <div class="read-more flex justify-between">
-                                                    <a href="blogdetail.html"class="inline-flex items-center  py-2.5 text-sm font-medium text-center text-black">
+                                                    <a href="blogdetail.html"class="inline-flex items-center  py-2.5 text-sm font-medium text-center text-black raleway">
                                                         Read more
                                                         <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180 text-black mt-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                                                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                                                         </svg>
                                                     </a>
-                                                    <p class="py-2.5 text-color">2021-10-01</p>
+                                                    <p class="py-2.5 text-color raleway">2021-10-01</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -203,17 +203,17 @@
                                             </a>
                                             <div class="p-5">
                                                 <a href="blogdetail.html">
-                                                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 text-black">Anti-Aging Tips For Spring</h5>
+                                                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 text-black cormorant">Anti-Aging Tips For Spring</h5>
                                                 </a>
-                                                <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Springtime is symbol of freshness and newness. Here at  Beauty in LA Clinic, we recommend that this is the time... </p>
+                                                <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 raleway">Springtime is symbol of freshness and newness. Here at  Beauty in LA Clinic, we recommend that this is the time... </p>
                                                 <div class="read-more flex justify-between">
-                                                    <a href="blogdetail.html"class="inline-flex items-center  py-2.5 text-sm font-medium text-center text-black">
+                                                    <a href="blogdetail.html"class="inline-flex items-center  py-2.5 text-sm font-medium text-center text-black raleway">
                                                         Read more
                                                         <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180 text-black mt-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                                                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                                                         </svg>
                                                     </a>
-                                                    <p class="py-2.5 text-color">2021-10-01</p>
+                                                    <p class="py-2.5 text-color raleway">2021-10-01</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -229,17 +229,17 @@
                                             </a>
                                             <div class="p-5">
                                                 <a href="blogdetail.html">
-                                                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 text-black">Thread Face-lift</h5>
+                                                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 text-black cormorant">Thread Face-lift</h5>
                                                 </a>
-                                                <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Fillers are a way to create beautiful plump lips which can add youth and beauty to appearances, and overall boost self...</p>
+                                                <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 raleway">Fillers are a way to create beautiful plump lips which can add youth and beauty to appearances, and overall boost self...</p>
                                                 <div class="read-more flex justify-between">
-                                                    <a href="blogdetail.html"class="inline-flex items-center  py-2.5 text-sm font-medium text-center text-black">
+                                                    <a href="blogdetail.html"class="inline-flex items-center  py-2.5 text-sm font-medium text-center text-black raleway">
                                                         Read more
                                                         <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180 text-black mt-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                                                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                                                         </svg>
                                                     </a>
-                                                    <p class="py-2.5 text-color">2021-10-01</p>
+                                                    <p class="py-2.5 text-color raleway">2021-10-01</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -255,17 +255,17 @@
                                             </a>
                                             <div class="p-5">
                                                 <a href="blogdetail.html">
-                                                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 text-black">Celluma Light Therapy</h5>
+                                                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 text-black cormorant">Celluma Light Therapy</h5>
                                                 </a>
-                                                <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Acne is a skin problem that affects a majority of people in The US. It is estimated that over 85% of people between.....</p>
+                                                <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 raleway">Acne is a skin problem that affects a majority of people in The US. It is estimated that over 85% of people between.....</p>
                                                 <div class="read-more flex justify-between">
-                                                    <a href="blogdetail.html"class="inline-flex items-center  py-2.5 text-sm font-medium text-center text-black">
+                                                    <a href="blogdetail.html"class="inline-flex items-center raleway py-2.5 text-sm font-medium text-center text-black">
                                                         Read more
                                                         <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180 text-black mt-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                                                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                                                         </svg>
                                                     </a>
-                                                    <p class="py-2.5 text-color">2021-10-01</p>
+                                                    <p class="py-2.5 text-color raleway">2021-10-01</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -276,7 +276,7 @@
                         </div>
                     </div>    
                     <div class="btn flex justify-center mt-10">
-                        <a href="blogdetail.html"class="inline-flex items-center    py-2.5 text-sm font-medium text-center text-black bg-gradient-to-r from-cyan-400 via-cyan-500 to-cyan-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-cyan-300 dark:focus:ring-cyan-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2">
+                        <a href="blogdetail.html"class="inline-flex items-center  raleway  py-2.5 text-sm font-medium text-center text-black bg-gradient-to-r from-cyan-400 via-cyan-500 to-cyan-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-cyan-300 dark:focus:ring-cyan-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2">
                             Load More
                         </a>
                     </div>
