--- a/body.html
+++ b/body.html
@@ -38,7 +38,7 @@
                 <div class="hidden justify-between items-center w-full lg:flex lg:w-auto lg:order-1" id="mobile-menu-2">
                     <ul class="flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8 lg:mt-0">
                         <li>
-                            <a href="#" class="block py-2 pr-4 pl-3 text-white rounded bg-primary-700 lg:bg-transparent lg:text-primary-700 lg:p-0 dark:text-white raleway" aria-current="page">HOME</a>
+                            <a href="index.html" class="block py-2 pr-4 pl-3 text-white rounded bg-primary-700 lg:bg-transparent lg:text-primary-700 lg:p-0 dark:text-white raleway" aria-current="page">HOME</a>
                         </li>
                         <li>
                             <a href="faceAndNeck.html" class="raleway block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 raleway">FACE AND NECK</a>
@@ -76,7 +76,7 @@
                                 <div class="banner-first-image text-white">
                                     <img src="assets/body-images/banner-image-1.png" alt="banner-image">
                                 </div>
-                                <div class="banner-heading font-64 text-white ml-8"><h2>BODY</h2></div>
+                                <div class="banner-heading font-64 text-white ml-8"><h2 class="cormorant">BODY</h2></div>`
                             </div>
                             <div class="w-11/12 mt-4 relative">    
                                 <div class="leave-background-image absolute top-[-80%] right-[-20%]">
@@ -85,14 +85,14 @@
                                 <div class="banner-second-part flex justify-between">
                                     <div class="banner-second-text">
                                         <div class="banner-p my-4">
-                                            <p class="text-white">We use premium products for a <br> more natural result.</p>
+                                            <p class="text-white raleway">We use premium products for a <br> more natural result.</p>
                                         </div>
                                         <div class="banner-crub flex">
                                             <div class="banner-crub-image mr-3">
                                                  <a href="index.html"><img src="assets/body-images/home.png" alt="Home"></a>
                                             </div>
                                             <p class="mr-3 text-white"> > </p>
-                                            <p class="text-white">Body</p>
+                                            <p class="text-white raleway">Body</p>
                                         </div>
                                     </div>
                                     <div class="banner-second-image ">
@@ -136,7 +136,7 @@
                                     <img src="assets/faceAdNecks-images/menu-image.png" alt="menu-image">
                                 </div>
                                 <div class="option-contant">
-                                    <p>Wrinkle reduction</p>
+                                    <p class="cormorant">Wrinkle reduction</p>
                                 </div>
                             </div>
                             <div class="option-section flex justify-around items-center">
@@ -144,7 +144,7 @@
                                     <img src="assets/faceAdNecks-images/menu-image.png" alt="menu-image">
                                 </div>
                                 <div class="option-contant">
-                                    <p>Wrinkle reduction</p>
+                                    <p  class="cormorant">Wrinkle reduction</p>
                                 </div>
                             </div>
                             <div class="option-section mt-6 flex justify-around items-center">
@@ -152,7 +152,7 @@
                                     <img src="assets/faceAdNecks-images/menu-image.png" alt="menu-image">
                                 </div>
                                 <div class="option-contant">
-                                    <p>Wrinkle reduction</p>
+                                    <p  class="cormorant">Wrinkle reduction</p>
                                 </div>
                             </div>
                         </div>
@@ -164,7 +164,7 @@
                                     <img src="assets/faceAdNecks-images/menu-image.png" alt="menu-image">
                                 </div>
                                 <div class="option-contant">
-                                    <p>Wrinkle reduction</p>
+                                    <p  class="cormorant">Wrinkle reduction</p>
                                 </div>
                             </div>
                             <div class="option-section flex justify-around items-center">
@@ -172,7 +172,7 @@
                                     <img src="assets/faceAdNecks-images/menu-image.png" alt="menu-image">
                                 </div>
                                 <div class="option-contant">
-                                    <p>Wrinkle reduction</p>
+                                    <p  class="cormorant">Wrinkle reduction</p>
                                 </div>
                             </div>
                             <div class="option-section mt-6 flex justify-around items-center">
@@ -180,7 +180,7 @@
                                     <img src="assets/faceAdNecks-images/menu-image.png" alt="menu-image">
                                 </div>
                                 <div class="option-contant">
-                                    <p>Wrinkle reduction</p>
+                                    <p  class="cormorant">Wrinkle reduction</p>
                                 </div>
                             </div>
                         </div>
@@ -192,7 +192,7 @@
                                     <img src="assets/faceAdNecks-images/menu-image.png" alt="menu-image">
                                 </div>
                                 <div class="option-contant">
-                                    <p>Wrinkle reduction</p>
+                                    <p  class="cormorant">Wrinkle reduction</p>
                                 </div>
                             </div>
                             <div class="option-section flex justify-around items-center">
@@ -200,7 +200,7 @@
                                     <img src="assets/faceAdNecks-images/menu-image.png" alt="menu-image">
                                 </div>
                                 <div class="option-contant">
-                                    <p>Wrinkle reduction</p>
+                                    <p  class="cormorant">Wrinkle reduction</p>
                                 </div>
                             </div>
                             <div class="option-section mt-6 flex justify-around items-center">
@@ -208,7 +208,7 @@
                                     <img src="assets/faceAdNecks-images/menu-image.png" alt="menu-image">
                                 </div>
                                 <div class="option-contant">
-                                    <p>Wrinkle reduction</p>
+                                    <p  class="cormorant">Wrinkle reduction</p>
                                 </div>
                             </div>
                         </div>
@@ -220,7 +220,7 @@
                                     <img src="assets/faceAdNecks-images/menu-image.png" alt="menu-image">
                                 </div>
                                 <div class="option-contant">
-                                    <p>Wrinkle reduction</p>
+                                    <p  class="cormorant">Wrinkle reduction</p>
                                 </div>
                             </div>
                             <div class="option-section flex justify-around items-center">
@@ -228,7 +228,7 @@
                                     <img src="assets/faceAdNecks-images/menu-image.png" alt="menu-image">
                                 </div>
                                 <div class="option-contant">
-                                    <p>Wrinkle reduction</p>
+                                    <p  class="cormorant">Wrinkle reduction</p>
                                 </div>
                             </div>
                             <div class="option-section mt-6 flex justify-around items-center">
@@ -236,7 +236,7 @@
                                     <img src="assets/faceAdNecks-images/menu-image.png" alt="menu-image">
                                 </div>
                                 <div class="option-contant">
-                                    <p>Wrinkle reduction</p>
+                                    <p  class="cormorant">Wrinkle reduction</p>
                                 </div>
                             </div>
                         </div>
@@ -249,7 +249,7 @@
 
          <section>
             <div class="advanve-heading text-center mb-6">
-                <h3 class="font-22 font-bold">Advanced Body <span class="font-normal">Remodeling</span></h3>
+                <h3 class="font-22 font-bold cormorant">Advanced Body <span class="font-normal">Remodeling</span></h3>
             </div>
             <div class="Advanced-section flex justify-center">    
                 <div class="container ">
@@ -299,34 +299,34 @@
                             <div class="advance-third-part">
                                 <div class="advance-para">
                                     <div class="advance-para-head">
-                                        <p class="font-bold my-2">How Does Plus Work?</p>
+                                        <p class="font-bold my-2 cormorant">How Does Plus Work?</p>
                                     </div>
                                     <div class="advance-para-text">
-                                        <p>Plus was created and based on the development and clinical success of the proprietary A.C.E. (Acquire, Control and Extend) technology. A.C.E. technology targets deep within the skin to ensure that no areas are under, </p>
+                                        <p class="raleway">Plus was created and based on the development and clinical success of the proprietary A.C.E. (Acquire, Control and Extend) technology. A.C.E. technology targets deep within the skin to ensure that no areas are under, </p>
                                     </div>
                                 </div>
                                 <div class="advance-para">
                                     <div class="advance-para-head">
-                                        <p class="font-bold my-2">What Areas Can Be Treated?</p>
+                                        <p class="font-bold my-2 raleway">What Areas Can Be Treated?</p>
                                     </div>
                                     <div class="advance-para-text">
-                                        <p>Plus can be used on parts of the body that may need contraction after the effects of weight gain/loss or general aging. Most common areas of treatment include the abdomen, arms (bat wings), inner thighs, outer thighs, back fat and knees.</p>
+                                        <p class="raleway">Plus can be used on parts of the body that may need contraction after the effects of weight gain/loss or general aging. Most common areas of treatment include the abdomen, arms (bat wings), inner thighs, outer thighs, back fat and knees.</p>
                                     </div>
                                 </div>
                                 <div class="advance-para">
                                     <div class="advance-para-head">
-                                        <p class="font-bold my-2">Will It Hurt?</p>
+                                        <p class="font-bold my-2 raleway">Will It Hurt?</p>
                                     </div>
                                     <div class="advance-para-text">
-                                        <p>Plus is essentially painless and has no downtime; it feels like a hot stone massage. Patients may see slight redness in the treated area, which will lessen within a few hours. All patients are able to return to their daily activities immediately after treatment.</p>
+                                        <p class="raleway">Plus is essentially painless and has no downtime; it feels like a hot stone massage. Patients may see slight redness in the treated area, which will lessen within a few hours. All patients are able to return to their daily activities immediately after treatment.</p>
                                     </div>
                                 </div>
                                 <div class="advance-para">
                                     <div class="advance-para-head">
-                                        <p class="font-bold my-2">How Many Sessions Sre Required?</p>
+                                        <p class="font-bold my-2 raleway">How Many Sessions Sre Required?</p>
                                     </div>
                                     <div class="advance-para-text">
-                                        <p>Typically, weekly sessions are recommended over a six to eight week period. Individuals with mild laxity may be treated in fewer sessions with more weeks between each treatment. Scheduling should be based on a pre-evaluation. Best results will be noticed over time or after a series of treatments.</p>
+                                        <p class="raleway">Typically, weekly sessions are recommended over a six to eight week period. Individuals with mild laxity may be treated in fewer sessions with more weeks between each treatment. Scheduling should be based on a pre-evaluation. Best results will be noticed over time or after a series of treatments.</p>
                                     </div>
                                 </div>
                             </div>
@@ -362,19 +362,19 @@
                             
                             <div class="w-3/12  border-r-4 ">
                                 <div class="call-heading ">
-                                    <h2 class="font-bold  font-34">call us</h2>
+                                    <h2 class="font-bold  font-34 cormorant">call us</h2>
                                 </div>
                                 <div class="call-number text-color font-family">
-                                    <a href="tel:+707-240-4040">+707-240-4040</a>
+                                    <a href="tel:+707-240-4040 raleway">+707-240-4040</a>
                                 </div>
                             </div>
                             <div class="w-6/12">
                                 <div class="call-body-sec ml-5 ">
                                     <div class="call-text mb-3">
-                                        <p>It is a long established fact that we reader will be distracted by the readable content.</p>
+                                        <p class="raleway">It is a long established fact that we reader will be distracted by the readable content.</p>
                                     </div>
                                     <div class="call-button">
-                                        <button type="button" class="text-white  from-cyan-400 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                                        <button type="button" class="text-white raleway from-cyan-400 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                                             Get in touch
                                             </button>
                                     </div>
@@ -392,10 +392,10 @@
                 <div class="container mx-auto flex justify-around items-center">
                     <div class="body-video-image w-10/12 flex justify-center relative ">
                         <div class="w-9/12 flex text-white font-bold pl-10 items-center ">
-                            <h2 class="font-34">Featured Videos BODY fx</h2>
+                            <h2 class="font-34 cormorant">Featured Videos BODY fx</h2>
                         </div>
                         <div class="w-3/12 flex items-center">
-                            <a href="#" class="bg-teal-500 hover:bg-teal-700 text-white py-2 px-4 rounded">More Videos</a>
+                            <a href="#" class="bg-teal-500  hover:bg-teal-700 raleway text-white py-2 px-4 rounded">More Videos</a>
                         </div>
                         <div class="body-video-first-image absolute top-[70%] left-[7.5%]  w-5/12"> 
                             <img src="assets/body-images/fetuares-image-2.png" alt="body-video-image">
