--- a/contactus.html
+++ b/contactus.html
@@ -37,7 +37,7 @@
                 <div class="hidden justify-between items-center w-full lg:flex lg:w-auto lg:order-1" id="mobile-menu-2">
                     <ul class="flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8 lg:mt-0">
                         <li>
-                            <a href="#" class="block py-2 pr-4 pl-3 text-white rounded bg-primary-700 lg:bg-transparent lg:text-primary-700 lg:p-0 dark:text-white raleway" aria-current="page">HOME</a>
+                            <a href="index.html" class="block py-2 pr-4 pl-3 text-white rounded bg-primary-700 lg:bg-transparent lg:text-primary-700 lg:p-0 dark:text-white raleway" aria-current="page">HOME</a>
                         </li>
                         <li>
                             <a href="faceAndNeck.html" class="raleway block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 raleway">FACE AND NECK</a>
@@ -75,7 +75,7 @@
                                 <div class="banner-first-image text-white">
                                     <img src="assets/contactus-image/banner-image-1.png" alt="banner-image">
                                 </div>
-                                <div class="banner-heading font-64 text-white ml-8"><h2>CONTACT US</h2></div>
+                                <div class="banner-heading font-64 text-white ml-8"><h2 class="cormorant">CONTACT US</h2></div>
                             </div>
                             <div class="w-11/12 mt-4 relative">    
                                 <div class="leave-background-image absolute top-[-80%] right-[-20%]">
@@ -84,14 +84,14 @@
                                 <div class="banner-second-part flex justify-between">
                                     <div class="banner-second-text">
                                         <div class="banner-p my-4">
-                                            <p class="text-white">We use premium products for a <br> more natural result.</p>
+                                            <p class="text-white raleway">We use premium products for a <br> more natural result.</p>
                                         </div>
                                         <div class="banner-crub flex">
                                             <div class="banner-crub-image mr-3">
                                                  <a href="index.html"><img src="assets/body-images/home.png" alt="Home"></a>
                                             </div>
                                             <p class="mr-3 text-white"> > </p>
-                                            <p class="text-white">Contact Us</p>
+                                            <p class="text-white raleway">Contact Us</p>
                                         </div>
                                     </div>
                                     <div class="banner-second-image ">
@@ -127,13 +127,13 @@
                                             <img src="assets/faceAdNecks-images/decoration-image-2.png" alt=" decoration-second-image">
                                         </div>
                                         <div class="contact pl-4 py-8">
-                                                <h4 class="font-bold font-20">Contact <span class="font-normal">Detail</span></h4>
+                                                <h4 class="font-bold font-20 cormorant">Contact <span class="font-normal">Detail</span></h4>
                                                 <div class="call flex mt-2 items-center">
                                                     <div class="call-icon px-2 py-2 bg-cyan-300 ">
                                                         <img src="assets/contactus-image/phone.png" alt="call-icon">
                                                     </div>
                                                     <div class="call-number ml-2">
-                                                        <p class="text-color">+707-240-4040</p>
+                                                        <p class="text-color raleway">+707-240-4040</p>
                                                     </div>
                                                 </div>
                                                 <div class="call flex mt-2 items-center">
@@ -141,7 +141,7 @@
                                                         <img src="assets/contactus-image/envelope.png" alt="call-icon">
                                                     </div>
                                                     <div class="call-number ml-2">
-                                                        <p class="text-color">info@beautyinla.com</p>
+                                                        <p class="text-color raleway">info@beautyinla.com</p>
                                                     </div>
                                                 </div>
                                                 <div class="call flex mt-2 items-center">
@@ -149,7 +149,7 @@
                                                         <img src="assets/contactus-image/map.png" alt="call-icon">
                                                     </div>
                                                     <div class="call-number ml-2">
-                                                        <p class="text-color">7317 Reseda Blvd. Reseda CA 91335 2904 Theresa Dr, #3 Newbury Park, CA 91320</p>
+                                                        <p class="text-color raleway">7317 Reseda Blvd. Reseda CA 91335 2904 Theresa Dr, #3 Newbury Park, CA 91320</p>
                                                     </div>
                                                 </div>
                                         </div>
@@ -172,7 +172,7 @@
                             <div class="map-first-part flex justify-between items-center">
                                 <div class="w-1/2 px-3 py-4 ">
                                     <div class="map-contant">
-                                        <h2 class="text-2xl font-bold mb-4">Get In Touch</h2>
+                                        <h2 class="text-2xl font-bold mb-4 cormorant">Get In Touch</h2>
                                         <form>
                                           <div class="space-y-4">
                                             <input
@@ -202,7 +202,7 @@
                                           </div>
                                           <button
                                             type="submit"
-                                            class="mt-4 px-6 py-2 bg-teal-500 text-white rounded-md shadow-md hover:bg-teal-600"
+                                            class="mt-4 px-6 py-2 bg-teal-500 text-white raleway rounded-md shadow-md hover:bg-teal-600"
                                           >
                                             Send Messages
                                           </button>
@@ -248,10 +248,10 @@
                                             <img src="assets/contactus-image/heart.png" alt="heart">
                                         </div>
                                         <div class="head mb-6">
-                                            <h3 class="font-bold">Personalized <span class="font-normal">Treatment</span></h3>
+                                            <h3 class="font-bold cormorant">Personalized <span class="font-normal">Treatment</span></h3>
                                         </div>
                                         <div class="pera mb-6">
-                                            <p class="text-color">Treatment choices perfectly match your goals of treatment complications with early intervention.</p>
+                                            <p class="text-color raleway">Treatment choices perfectly match your goals of treatment complications with early intervention.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -271,10 +271,10 @@
                                             <img src="assets/contactus-image/bottle.png" alt="heart">
                                         </div>
                                         <div class="head mb-6">
-                                            <h3 class="font-bold">Personalized <span class="font-normal">Treatment</span></h3>
+                                            <h3 class="font-bold cormorant">Personalized <span class="font-normal">Treatment</span></h3>
                                         </div>
                                         <div class="pera mb-6">
-                                            <p class="text-color">Treatment choices perfectly match your goals of treatment complications with early intervention.</p>
+                                            <p class="text-color raleway">Treatment choices perfectly match your goals of treatment complications with early intervention.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -292,10 +292,10 @@
                                             <img src="assets/contactus-image/health.png" alt="heart">
                                         </div>
                                         <div class="head mb-6">
-                                            <h3 class="font-bold">Personalized <span class="font-normal">Treatment</span></h3>
+                                            <h3 class="font-bold cormorant">Personalized <span class="font-normal">Treatment</span></h3>
                                         </div>
                                         <div class="pera mb-6">
-                                            <p class="text-color">Treatment choices perfectly match your goals of treatment complications with early intervention.</p>
+                                            <p class="text-color raleway">Treatment choices perfectly match your goals of treatment complications with early intervention.</p>
                                         </div>
                                     </div>
                                 </div>
