--- a/video.html
+++ b/video.html
@@ -38,7 +38,7 @@
                 <div class="hidden justify-between items-center w-full lg:flex lg:w-auto lg:order-1" id="mobile-menu-2">
                     <ul class="flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8 lg:mt-0">
                         <li>
-                            <a href="#" class="block py-2 pr-4 pl-3 text-white rounded bg-primary-700 lg:bg-transparent lg:text-primary-700 lg:p-0 dark:text-white raleway" aria-current="page">HOME</a>
+                            <a href="index.html" class="block py-2 pr-4 pl-3 text-white rounded bg-primary-700 lg:bg-transparent lg:text-primary-700 lg:p-0 dark:text-white raleway" aria-current="page">HOME</a>
                         </li>
                         <li>
                             <a href="faceAndNeck.html" class="raleway block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 raleway">FACE AND NECK</a>
@@ -76,7 +76,7 @@
                                 <div class="banner-first-image text-white">
                                     <img src="assets/video-image/banner-image-1.png" alt="banner-image">
                                 </div>
-                                <div class="banner-heading font-64 text-white ml-8"><h2>VIDEOS</h2></div>
+                                <div class="banner-heading font-64 text-white ml-8"><h2 class="cormorant">VIDEOS</h2></div>
                             </div>
                             <div class="w-11/12 mt-4 relative">    
                                 <div class="leave-background-image absolute top-[-80%] right-[-20%]">
@@ -85,14 +85,14 @@
                                 <div class="banner-second-part flex justify-between">
                                     <div class="banner-second-text">
                                         <div class="banner-p my-4">
-                                            <p class="text-white">We use premium products for a <br> more natural result.</p>
+                                            <p class="text-white raleway">We use premium products for a <br> more natural result.</p>
                                         </div>
                                         <div class="banner-crub flex">
                                             <div class="banner-crub-image mr-3">
                                                  <a href="index.html"><img src="assets/body-images/home.png" alt="Home"></a>
                                             </div>
                                             <p class="mr-3 text-white"> > </p>
-                                            <p class="text-white">Videos</p>
+                                            <p class="text-white raleway">Videos</p>
                                         </div>
                                     </div>
                                     <div class="banner-second-image ">
